# stmApp

./: .gitignore  .travis.yml  BSP.c  BSP.h  Bootloader.uvoptx  Bootloader.uvprojx  CMakeLists.txt  CRC.c  CRC.h  Can.c  Can.h  Command.h  Common.h  Flash.c  Flash.h  Gpio.h  Packet.h  Protocol.c  Protocol.h  README.md  Spi1.c  Spi1.h  Usart1.c  Usart1.h  cortexM0.cmake  main.c
.vera++/profiles/: default
1.5.0/Device/Source/ARM/: startup_stm32f072xb.s
Device/ldscripts/: stm32f0discovery_def.ld
RTE/_Release_CAN/: RTE_Components.h
RTE/_Release_Pilot/: RTE_Components.h
RTE/_Release_Torque/: RTE_Components.h
SVD/: STM32F0x0.SFR  STM32F0x0.sfd  STM32F0x1.SFR  STM32F0x1.sfd  STM32F0x2.SFR  STM32F0x2.sfd  STM32F0x8.SFR  STM32F0x8.sfd
cmake/: bootcommon.cmake  canboot.cmake  cortexM0.cmake  flasher.cmake  framework.cmake  pilotboot.cmake  spiboot.cmake  torqueboot.cmake  utils.cmake  vera++.cmake  vera.cmake  verahelper.cmake
inc/: CRC.h  Can.h  Command.h  Common.h  Flash.h  Protocol.h  Spi1.h
src/: BSP.c  Flash.c  Spi1.c  main.c
